--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,9 @@ header{
 	transition-duration: 0.4s;
 	background-image: linear-gradient(#6AFCC7, #3FD2CE);
 	border: none;
-	border-radius: 4px;
+	border-radius: 8px;
+	height: 30px;
+	width: 60px;
 }
 .homebutton:hover {
   box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24),0 7px 8px 0 rgba(0,0,0,0.19);
@@ -125,19 +127,315 @@ a{
 /*Section*/
 .section3{
 	width: 100%;
-	height: 700px;
-  background-image: linear-gradient(#FF6C54, #FF3758);
+	height: 720px;
+  background-image: linear-gradient(#FF6455, #FF2D59);
   text-align: center;
   padding-top: 80px;
 }
-.section3imgdiv{
-	margin-top: 300px;
-}
 .section3img{
-	height: 385px;
-	width: 900px;
-	margin-top: 400px;
+	height: 373px;
+	width: 780px;
+	margin-top: 200px;
 }
-.section3article{
-	margin-bottom: 300px;
+.section3h1{
+	margin-bottom: 35px;
 }
+.section3box{
+	height: 570px;
+	width: 100%;
+	text-align: center;
+	padding-left: 330PX;
+	padding-top: 65PX;
+	display: flex;
+}
+.section3phonesimg{
+	float: left;
+	height: 435px;
+}
+.section3boxtext{
+	width: 150px;
+	
+}
+.section3boxp{
+	height: 150px;
+	width: 470px;
+	margin-top: 28px;
+	padding-left: 100px;
+
+}
+.section3boxh1{
+	margin-bottom: 20px;
+	padding-right: 150px;
+	margin-top: 100px;
+}
+.section3boxbutton{
+	border-radius: 12px;
+	width: 250px;
+	height: 70px;
+	transition-duration: 0.4s;
+	background-image: linear-gradient(#FF6C54, #FF3758);
+	border: none;
+}
+.section3boxbutton:hover{
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.section3box2{
+	height: 1000px;
+	width: 100%;
+	text-align: center;
+	padding-top: 65PX;
+	padding-left: 250px;
+	display: flex;
+	background-image: linear-gradient(to bottom right,#93FFD5, #41D3D0);
+}
+.section3box2p{
+	width: 870px;
+}
+h1{
+	margin-bottom: 30px;
+}
+.section3nav{
+	margin-top: 100px;
+	margin-left: 200px;
+	margin-bottom: 30px;
+}
+.containerbox{
+	width: 250px;
+	height: 250px;
+	display: inline-block;
+	padding-top: 20px;
+	background-color: white;
+	margin-left: 15px;
+}
+.box2{
+	margin-top: 20px;
+}
+.section3box2button{
+	margin-top: 60px;
+	background-color: none;
+	border: none;
+}
+
+.section3lastbox{
+	height: 340px;
+	width: 100%;
+	background-color: #243638;
+	align-items: center;
+}
+.section3icons{
+	display: inline-block;
+	align-items: center;
+	text-align: center;
+	margin-left: 30px;
+	padding-left: 120px;
+	padding-top: 90px;
+}
+.iconstext{
+	margin-top: 30px;
+}
+/*Section4*/
+.section4{
+	height: 725px;
+	width: 100%;
+	background-color: white;
+	text-align: center;
+	align-items: center;
+	padding-top: 100px;
+}
+.jhondoe{
+	background-image: linear-gradient(#6AFCC7, #3FD2CE);
+	padding-top: 20px;
+}
+.jhonedoeimg{
+	height: 180px;
+	width: 230px;
+}
+.employe{
+	display: inline-block;
+	align-items: center;
+	text-align: center;
+	margin-top: 60px;
+	margin-left: 30px;
+
+}
+.employetext{
+	width: 230px;
+	margin-top: 20px;
+}
+.jhondoeh2{
+	margin-bottom: 20px;
+}
+/*section*/
+.section5{
+	height: 370px;
+	width: 100%;
+	text-align: center;
+	align-items: center;
+	padding-top: 100px;
+	background-image: linear-gradient(#FE5958, #FF3B57);
+}
+.section5icon1{
+	margin-bottom: 20px;
+}
+.section5icon2{
+	margin-top: 50px;
+}
+.section5box2{
+	height: 370px;
+	width: 100%;
+	text-align: center;
+	align-items: center;
+	padding-top: 150px;
+	background-color: #243638;
+}
+.subscribebutton{
+	background-color: #243638;
+	border-color: #68FAC8;
+	width: 170px;
+	height: 50px;
+}
+.subscribebutton:hover{
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+/*section6*/
+.section6{
+	height: 490px;
+	width: 100%;
+	background-color: white;
+	text-align: center;
+	align-items: center;
+	padding-top: 100px;
+	display: inline-block;
+
+}
+.section6img{
+	width: 530px;
+	height: 300px;
+}
+
+.section6box{
+	height: 140px;
+	width: 480px;
+	text-align: center;
+	display: inline-block;
+}
+.section6h1{
+	margin-bottom: 100px;
+}
+.section6p{
+	padding-bottom: 50px;
+	margin-left: 50px;
+}
+/*Section*/
+.section7{
+	height: 530px;
+	width: 100%;
+	background-color: white;
+	text-align: center;
+	align-items: center;
+	padding-top: 100px;
+	display: inline-block;
+	background-color: #66EDCD;
+}
+.section7box{
+	height: 140px;
+	width: 480px;
+	text-align: center;
+	display: inline-block;
+	padding-bottom: 100px;
+}
+.section7h1{
+	margin-bottom: 150px;
+}
+.section7p{
+	padding-bottom: 250px;
+	margin-left: 50px;
+}
+.section7icon{
+	margin-left: 50px;
+	margin-top: 28px;
+}
+/*section8*/
+.section8{
+	height: 580px;
+	width: 100%;
+	text-align: center;
+	align-items: center;
+	padding-top: 110px;
+	display: inline-block;
+	background-color: white;
+}
+.anyastoen{
+	display: inline-block;
+	align-items: center;
+	text-align: center;
+}
+.client{
+	width: 370px;
+	height: 220px;
+	display: inline-block;
+	background-image: linear-gradient(to bottom right,#93FFD5, #41D3D0);
+	margin-top: 75px;
+	padding-top: 40px;
+	margin-left: 30px;
+}
+.section8h3{
+	margin-top: 15px;
+	margin-bottom: 20px;
+}
+/*contact*/
+.contact{
+	height: 660px;
+	width: 100%;
+	text-align: center;
+	align-items: center;
+	background-image: linear-gradient(to bottom right,#FF877D, #FF2A5D);
+	padding-top: 80px;
+}
+.contactp{
+	width: 660px;
+	text-align: center;
+	margin-left: 360px;
+}
+.form{
+	margin-top: 100px;
+}
+.contactinput{
+	height: 50px;
+	width: 320px;
+	background-color: #FF6772;
+	margin-left: 30px;
+}
+.contactinput2{
+	height: 50px;
+	width: 673px;
+	background-color: #FF6772;
+	margin-left: 28px;
+	margin-top: 85px;
+
+}
+.contactbutton{
+	background-color: #253639;
+	width: 170px;
+	height: 50px;
+	border: none;
+	margin-top: 40px;
+	margin-left: 530px;
+}
+/*map*/
+.map{
+	height: 400px;
+	width: 100%
+	text-align: center;
+	display: flex;
+	align-items: center;
+}
+
+ /*footer*/
+ footer{
+ 	height: 110px;
+ 	width: 100%;
+ 	background-color: #243638;
+ 	text-align: center;
+ 	padding-top: 45px;
+ }
