--- a/style/style.css
+++ b/style/style.css
@@ -122,8 +122,8 @@ a{
 	border: none;
 }
 .section2button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);}
+
 /*Section*/
 .section3{
 	width: 100%;
@@ -203,7 +203,6 @@ h1{
 	width: 250px;
 	height: 250px;
 	display: inline-block;
-	padding-top: 20px;
 	background-color: white;
 	margin-left: 15px;
 }
@@ -221,6 +220,11 @@ h1{
 	width: 100%;
 	background-color: #243638;
 	align-items: center;
+}
+.containerimg{
+	width: 250px;
+	height: 165px;
+	margin-bottom: 20px;
 }
 .section3icons{
 	display: inline-block;
@@ -421,6 +425,36 @@ h1{
 	border: none;
 	margin-top: 40px;
 	margin-left: 530px;
+}
+.contactbutton {
+  border-radius: 4px;
+  text-align: center;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.contactbutton span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.contactbutton span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+.contactbutton:hover span {
+  padding-right: 25px;
+}
+
+.contactbutton:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 /*map*/
 .map{
