--- a/style/style.css
+++ b/style/style.css
@@ -46,6 +46,7 @@ h1{
 }
 h2{
 	font-family: 'Roboto-m';
+	font-size: 20px;
 }
 h3{
 	font-family: 'Roboto-r';
@@ -176,6 +177,9 @@ a{
   text-align: center;
   padding-top: 80px;
 }
+.section3p{
+	margin bottom: 30px;
+}
 .section3img{
 	height: 373px;
 	width: 780px;
@@ -184,6 +188,88 @@ a{
 .section3h1{
 	margin-bottom: 35px;
 }
+/*slider*/
+.slideimg{
+	width: 800px;
+	height: 500px;
+	border-radius: 35px;
+}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.slideimg{
+	margin-top: 10px;
+}
+
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  padding-top: 20px;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+
+
+/*sliderr en */
 .section3box{
 	height: 570px;
 	width: 100%;
@@ -216,6 +302,9 @@ a{
 	margin-bottom: 20px;
 	padding-right: 150px;
 	margin-top: 100px;
+	margin-left: 50px;
+	padding-left: 50px;
+	padding-bottom: 20px;
 }
 .section3boxbutton{
 	border-radius: 12px;
@@ -365,7 +454,7 @@ h1{
 }
 /*section6*/
 .section6{
-	height: 490px;
+	height: 590px;
 	width: 100%;
 	background-color: white;
 	text-align: center;
@@ -376,7 +465,7 @@ h1{
 }
 .section6img{
 	width: 530px;
-	height: 300px;
+	height: 350px;
 }
 .section6img:hover {
   transition: 0.6s;
